k8s/certmng/new/ok/proxy_nms.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reverse-proxy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reverse-proxy
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: reverse-proxy
        app1: all-domain-app
    spec:
      containers:
        - name: reverse-proxy-pod
          image: monitorsystemall/nginx
          volumeMounts:
            - name: let-volume
              mountPath: /etc/letsencrypt
            - name: nix-volume
              mountPath: /etc/nginx
          ports:
            - containerPort: 80
            - containerPort: 443
          resources:
            limits:
              memory: 4096Mi
              cpu: 2
      volumes:
        - name: let-volume
          nfs:
            server: 192.168.88.143
            path: /proxy/letsencrypt
        - name: nix-volume
          nfs:
            server: 192.168.88.143
            path: /proxy/nginx
