k8s/certmng/new/ok/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
      #nginx.ingress.kubernetes.io/default-backend: "nms"
    
spec:
  rules:
    - host: nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
    - host: hr.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
    - host: 3r.vpbx.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
    - host: influxdb.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
    - host: ketnoigiasu.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
    - host: ketnoigiasu.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
    - host: ketnoigiasu.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### support.nms.com.vn
    - host: support.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end support.nms.com.vn
### cdr.nms.com.vn
    - host: cdr.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end cdr.nms.com.vn
### demo.pbx.nms.com.vn
    - host: demo.pbx.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end demo.pbx.nms.com.vn
### onschool.vpbx.vn
    - host: onschool.vpbx.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end onschool.vpbx.vn
### test.nms.com.vn
    - host: test.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end test.nms.com.vn
### test.pbx.nms.com.vn
    - host: test.pbx.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end test.pbx.nms.com.vn
### thuydung.nms.com.vn
    - host: thuydung.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end thuydung.nms.com.vn
### ticket-demo.nms.com.vn
    - host: ticket-demo.nms.com.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nms
                port:
                  number: 443
### end ticket-demo.nms.com.vn
  tls:
  - hosts:
    - "nms.com.vn"
    - "hr.nms.com.vn"
    - "3r.vpbx.vn"
    - "influxdb.nms.com.vn"
    - "support.nms.com.vn"
    - "cdr.nms.com.vn"
    - "ketnoigiasu.vn"
    - "ketnoigiasu.com.vn"
    - "ketnoigiasu.com"
    - "demo.pbx.nms.com.vn"
    - "onschool.vpbx.vn"
    - "test.nms.com.vn"
    - "test.pbx.nms.com.vn"
    - "thuydung.nms.com.vn"
    - "ticket-demo.nms.com.vn"
      # "nms.com.vn"
      #- "*.ks.nms.com.vn"  
    secretName: nms-tls
